--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ android {
     }
 
     lint {
-        checkOnly("GlobalScopeUsage", "JobInBuilderUsage", "RawColorUsage")
+        checkOnly("GlobalScopeUsage", "JobInBuilderUsage", "ColorUsage")
     }
 }
 
